@@ -1,6 +1,7 @@
 # Generated by roxygen2: do not edit by hand
 
 export(plotAbundanceDensity)
+export(plotBarplot)
 export(plotCCA)
 export(plotColGraph)
 export(plotColTile)
@@ -26,6 +27,7 @@ exportMethods(combineTreeData)
 exportMethods(getNeatOrder)
 exportMethods(plotAbundance)
 exportMethods(plotAbundanceDensity)
+exportMethods(plotBarplot)
 exportMethods(plotCCA)
 exportMethods(plotColGraph)
 exportMethods(plotColTile)
