@@ -41,3 +41,4 @@ Changes in version 1.15.x
 + plotMediation: Method to visualise results of mediation analysis
 + plotRDA: Fix error that occurred when variable names were similar
 + Added plotHistogram
++ Added plotBarplot
